# etl_project_absenteeism

./: .gitignore  README.md  doc.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
app/: main.py
app/pipe/: extract.py  load.py  transform.py
data/output/: output_file.xlsx
docs/: extract.md  index.md  load.md  transform.md
extract/: index.html
load/: index.html
search/: search_index.json
site/: 404.html  objects.inv
site/load/: index.html
site/transform/: index.html
tests/: test_integration.py  teste_unitario.py
transform/: index.html
