[tool.poetry]
name = "jd"
version = "0.1.0"
description = "projeto de etl"
authors = ["victorthecreative <vitaopoter@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.1"
blue = "^0.9.1"
isort = "^5.13.2"
mkdocs = "^1.5.3"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

